fix: Address sonarqube issues